--- a/week01/tute01-2/Makefile
+++ b/week01/tute01-2/Makefile
@@ -1,7 +1,7 @@
 CC=g++
 CFLAGS=-std=c++14 -pedantic -Wall -Wextra -Werror -Wsign-conversion -Wconversion -Woverloaded-virtual -Wshadow -Wnull-dereference
 
-default: hello_world fizz_buzz function_overloading explicit_type_conversions auto leap_year sum_prime
+default: hello_world fizz_buzz function_overloading explicit_type_conversions auto leap_year sum_prime input_output
 
 hello_world:
 	$(CC) $(CFLAGS) hello_world.cpp -o hello_world.out
@@ -23,6 +23,9 @@ leap_year:
 
 sum_prime:
 	$(CC) $(CFLAGS) sum_prime.cpp -o sum_prime.out
+
+input_output:
+	$(CC) $(CFLAGS) input_output.cpp -o input_output.out
 
 .PHONY: clean
 clean:
